@@ -85,6 +85,10 @@ Here is a history of user visible changes to Mailman.
     - Fixed a bug in admindb.py in the implementation of replacing "No Reason
       Given" with the default rejection reason.  Bug #325016.
 
+  Miscellaneous
+
+    - Added Lindsay Haisley's courier_to_mailman.py to the contrib directory.
+
 2.1.11 (30-Jun-2008)
 
   New Features
